# tracely

./: .env.example  .gitignore  CLAUDE.md  README.md  categories.yml  docker-compose.yml
backend/: alembic.ini  main.py  pyproject.toml
backend/api/middleware/: auth.py
backend/api/routes/: analytics.py  categories.py  query.py  transactions.py  upload.py
backend/db/: models.py  postgres.py  qdrant_client.py  redis_client.py
backend/ingestion/: categoriser.py  chunker.py  embedder.py  pdf_parser.py  pipeline.py  rule_learner.py  table_extractor.py  transaction_parser.py
backend/migrations/versions/: 139facb0dd05_user_category_rules_and_user_corrected.py  316ff325650a_add_subcategory_and_user_corrected.py  598bec06a4f7_initial.py  cf17d3bef34d_add_subcategory_support.py
backend/rag/: context_builder.py  intent_classifier.py  llm_client.py  query_engine.py  retriever.py
backend/schemas/: models.py
backend/workers/: nats_worker.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: CategoryChart.tsx  ChatInterface.tsx  MonthlyTrend.tsx  PdfUploader.tsx  TransactionTable.tsx
frontend/src/pages/: Categories.tsx  Chat.tsx  Dashboard.tsx  Transactions.tsx  Upload.tsx
scripts/: seed_categories.py  setup.sh  start-backend.sh  start-worker.sh  start.sh  stop.sh  teardown.sh
